--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -649,15 +649,16 @@ img {
 }
 #skills_logo{
   display: grid;
-  grid-template-columns: repeat(8,1fr);
+  grid-template-columns: repeat(10,1fr);
   grid-gap: 20px;
   justify-content: center;
   align-items: center;
   grid-template-rows: auto;
 }
 #skills_logo>img{
-  height: 100%;
   height: 60%;
+  height: 80%;
+  border-radius: 10px;
 }
 #skills_logo>img:hover{
   cursor: pointer;
